# souvenir

./: pyproject.toml
souvenir/: __main__.py  git.py  svutils.py
