[tool.poetry]
name = "souvenir"
version = "0.1.0"
description = "Little CLI program which helps creating and viewing flashcards"
authors = ["Denis Gruzdev <codingjerk@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
sv = 'souvenir.__main__:sv'

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
